--- a/Tugas 1 Algopro_Afifah Mutiah Nurdin_H051211040.ipynb
+++ b/Tugas 1 Algopro_Afifah Mutiah Nurdin_H051211040.ipynb
@@ -6,7 +6,7 @@
       "name": "Tugas 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPwOQUEyCNhqekouAeabkse",
+      "authorship_tag": "ABX9TyM8RDB5Ole8oWxTw/aXmJrs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,7 +230,7 @@
         "\n",
         "Buatlah program untuk menampilkan bentuk bilangan seperti berikut ini:\n",
         "\n",
-        "Bilangan:<input suati bilangan(misal:5)>\n",
+        "Bilangan:<input suatu bilangan(misal:5)>\n",
         "\n",
         "1\n",
         "\n",
@@ -260,15 +260,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2nYM6U3wF0lJ",
-        "outputId": "57eb761c-333c-4d7e-9464-3338a1f66784"
+        "outputId": "b4d24cce-4962-46e5-f64d-7b0cfd7e654d"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Input Bilangan : 5\n",
+            "input suatu bilangan : 5\n",
             "1 \n",
             "1 2 \n",
             "1 2 3 \n",
